--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-.carousel {
-    max-width: 50vw;
-    margin: auto;
+.carousel-item img {
+    position: absolute;
+    object-fit: fill;
+    top: 0;
+    left: 0;
+    max-height: 40vw;
 }
-img {
-    height: 30vw;
-}
-.navbar .active {
-    border-bottom: 1px solid white;
-}
+
+.carousel .carousel-item {
+    height: 40vw;
+  }
+  
