--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,3 @@
-.carousel-item img {
-    position: absolute;
-    object-fit: fill;
-    top: 0;
-    left: 0;
+.carousel-item {
     max-height: 40vw;
-}
-
-.carousel .carousel-item {
-    height: 40vw;
-  }
-  
+}  
